--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -1,4 +1,4 @@
-# Multi-stage build for Next.js blog application
+# Alternative Dockerfile with standalone build
 FROM node:18-alpine AS base
 
 # Install dependencies only when needed
@@ -8,7 +8,7 @@ WORKDIR /app
 
 # Install dependencies based on the preferred package manager
 COPY package.json package-lock.json* ./
-RUN npm ci
+RUN npm ci --only=production
 
 # Rebuild the source code only when needed
 FROM base AS builder
@@ -19,9 +19,10 @@ COPY . .
 # Set environment variables for build
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
+ENV CLOUD_RUN=1
 
-# Build the application
-RUN npm run build
+# Build the application with standalone output
+RUN npm run build:cloudrun
 
 # Production image, copy all the files and run next
 FROM base AS runner
@@ -34,11 +35,18 @@ ENV NEXT_TELEMETRY_DISABLED=1
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# Copy the build output (regular Next.js build, not standalone)
+# Copy the public folder
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./package.json
+
+# Check if standalone exists and copy accordingly
+RUN mkdir -p .next
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
+
+# Alternative: if standalone doesn't exist, use regular build
+# COPY --from=builder /app/.next ./.next
+# COPY --from=builder --chown=nextjs:nodejs /app/node_modules ./node_modules
+# COPY --from=builder --chown=nextjs:nodejs /app/package.json ./package.json
 
 # Change ownership to nextjs user
 RUN chown -R nextjs:nodejs /app
@@ -50,5 +58,8 @@ EXPOSE 3000
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
-# Start the application using npm start (which runs next start)
-CMD ["npm", "run", "serve"]
+# Start the application
+# For standalone build:
+CMD ["node", "server.js"]
+# For regular build:
+# CMD ["npm", "start"]
